.sisyphus/evidence/task-6-codegen-legacy.txt
Command: cargo test legacy_bytes_new_codegen_still_calls_bytes_new
Status: blocked by unrelated pre-existing test compile failures before target test execution.

Output:
    Blocking waiting for file lock on package cache
    Blocking waiting for file lock on package cache
    Blocking waiting for file lock on package cache
    Blocking waiting for file lock on build directory
   Compiling opalescent v0.1.0 (/home/justi/Projects/opalescent)
error[E0026]: variant `ast::Stmt::Let` does not have a field named `type_annotation`
    --> src/parser/tests.rs:6143:9
     |
6143 |         type_annotation,
     |         ^^^^^^^^^^^^^^^ variant `ast::Stmt::Let` does not have this field

error[E0026]: variant `ast::Stmt::Let` does not have a field named `type_annotation`
    --> src/parser/tests.rs:6181:9
     |
6181 |         type_annotation,
     |         ^^^^^^^^^^^^^^^ variant `ast::Stmt::Let` does not have this field

error[E0425]: cannot find function `result_errors` in this scope
    --> src/type_system/tests.rs:8192:18
     |
8192 |     let errors = result_errors(&mut checker, &program, "new Person without fields must fail type-check");
     |                  ^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find function `result_errors` in this scope
    --> src/type_system/tests.rs:8217:18
     |
8217 |     let errors = result_errors(
     |                  ^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find function `result_errors` in this scope
    --> src/type_system/tests.rs:8242:18
     |
8242 |     let errors = result_errors(
     |                  ^^^^^^^^^^^^^ not found in this scope

Some errors have detailed explanations: E0026, E0425.
For more information about an error, try `rustc --explain E0026`.
error: could not compile `opalescent` (lib test) due to 5 previous errors
